--- a/.gitignore
+++ b/.gitignore
@@ -158,11 +158,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-
+*.json
 *.pdf
+*.csv
+*.zip
 
 capabilities/
 extracted_text/
 uploads/
-static/
-*.json
